--- a/client/sideNav.html
+++ b/client/sideNav.html
@@ -1,9 +1,11 @@
 <template name="sideNav">
-   <nav class="side-nav">
+    
+   <nav>
         <ul>
+            <li><a href="/new-goal">New Goal</a></li>
             <li><a href="/goal-book">Goal Book</a></li>
-            <li><a href="/menu">Task List</a></li>            
             <li><a href="/mcii-list">MCII List</a></li>
         </ul> 
     </nav> 
+    
 </template>
